@@ -30,6 +30,11 @@ By default, each bootstrap sample has the same number of observations
            \code{size} to get bootstrapped data with a specific number
            of observations.
 }
+\note{
+Specifying the \code{size}-argument is much less memory-efficient than
+      the bootstrap with replacement. Hence, it is recommended to ignore the
+      \code{size}-argument, if it is not really needed.
+}
 \examples{
 data(efc)
 bs <- bootstrap(efc, 5)
