@@ -10,6 +10,7 @@
 
 * `se` now also computes the standard error for intraclass correlation coefficients, as returned by the `icc()`-function.
 * `std_beta()` now always returns a tidy data frame (tibble) with model term names, standardized estimate, standard error and confidence intervals.
+* `r2()` now also computes alternative omega-squared-statistics, if null model is given.
 
 # sjstats 0.4.0
 
